# knowlix

./: .env.dev  .env.prod  .gitignore  README.md  alembic.ini  pyproject.toml  setup.cfg
alembic/: env.py
alembic/versions/: 334f3a8e0b42_initial_baseline.py  7c51c3f6fcd7_add_raw_questions_table.py  c5430586d6e3_raw_questions_audit_columns.py
docs/: REQUIREMENTS.md  TECHNICAL_DESIGN.md  TODO_LIST.md  plan.md
src/knowlix/: __init__.py  cli.py  settings.py
src/knowlix/application/: __init__.py
src/knowlix/application/ports/: __init__.py
src/knowlix/domain/: __init__.py
src/knowlix/infrastructure/: __init__.py
src/knowlix/infrastructure/persistence/: __init__.py  database.py  orm.py  unit_of_work.py
src/knowlix/infrastructure/persistence/models/: __init__.py  raw_question.py
src/knowlix/interfaces/: __init__.py
src/knowlix/interfaces/streamlit/: __init__.py
tests/: test_knowlix.py
tests/integration/: test_alembic_schema.py  test_persistence_smoke.py
tests/test_env/: test_env_dev.py  test_env_prod.py
