[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# src 布局：package-dir + packages.find 指明源码位置；egg-info 目录须靠仓库根目录的 setup.cfg [egg_info] egg_base = .
[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "knowlix"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.0",
  "psycopg[binary]>=3.1",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "pytest>=7.0",
  "python-dotenv>=1.0",
  "sqlalchemy>=2.0",
  "alembic>=1.13"
]

[project.scripts]
knowlix = "knowlix.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]